name:                mhueschen-cryptopals
version:             0.1.0.0
synopsis:            cryptopals solutions
license:             BSD3
license-file:        LICENSE
author:              Michael Hueschen
maintainer:          michaelhueschen@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Set1
                     , Set1.C1_orig
                     , Set1.C1
                     , Set1.C2
                     , Set1.C3
                     , Set1.C4
                     , Set1.C6
                     , Set1.C5
                     , Set1.C7
                     , Set1.C8
                     , Set2.Helpers
                     , Set2.C9
                     , Set2.C10
                     , Set2.C11
                     , Set2.C12
                     , Set2.C13
                     , Set2.C14
                     , Set2.C15
                     , Set2.C16
                     , Set3.C17
  other-extensions:    NoMonomorphismRestriction
  build-depends:       base >=4.9 && <4.10
                     , containers >=0.5 && <0.6
                     , bytestring >=0.10 && <0.11
                     , array >=0.5 && <0.6
                     , split
                     -- , cipher-aes
                     -- , crypto-cipher-types
                     , cryptonite
                     , random
                     , mtl
                     , MonadRandom
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Set1Spec
                     , Set1.C1Spec
                     , Set1.C2Spec
                     , Set1.C3Spec
                     , Set1.C5Spec
                     , Set2.C9Spec
                     , Set2.C10Spec
                     , Set2.C11Spec
                     , Set2.C13Spec
                     , Set2.C15Spec
                     , Set2.C16Spec
  build-depends:       base
                     , mhueschen-cryptopals
                     , hspec
                     , hspec-core
                     , hspec-contrib
                     , HUnit
                     , QuickCheck
                     , split
  default-language:    Haskell2010
